GH-2018 Fix security check when guild's heart is a block (Fix GH-2018)